--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,31 +23,23 @@ book:
     tools: 
       - icon: globe
         href: https://andrewmaclachlan.github.io/CASA0023/
-        text: "NMFS Open Science"
+        text: "CASA00023ModuleBook"
       - icon: github
         href: https://github.com/Murphy829/RSE
-        text: "RSE"
+        text: "SourceCode"
 
     style: "docked"
     search: true
     collapse-level: 1
-    contents:
-      - href: index.qmd
-        text: Welcome
-      - href: intro.qmd
-        text: 1 Introduction
-      - href: summary.qmd
-        text: summary
-      - href: references.qmd
-        text: references 
+
 
 bibliography: references.bib
 
 format:
   html:
     theme:
+      light: [cosmo, theme.scss]
       dark: [cosmo, theme-dark.scss]
-      light: [cosmo, theme.scss] 
     code-copy: true
     code-overflow: wrap
     toc: true
